kubernetes/kustomize/nscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nscale
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/app-root: /nscale_web
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  #tls:
  #- hosts:
  #  - example.org
  #  secretName: tls-secret
  rules:
  #- host: nscale.dev.ceyoniq-cloud.net
  - http:
      paths:
      - path: /nscalealinst1
        pathType: Prefix
        backend:
          service:
            name: application-layer
            port: 
              name: application
      - path: /index.html
        pathType: Prefix
        backend:
          service:
            name: application-layer
            port:
              name: application
      - path: /res
        pathType: Prefix
        backend:
          service:
            name: application-layer
            port: 
              name: application
      - path: /engine.properties
        pathType: Prefix
        backend:
          service:
            name: application-layer
            port: 
              name: application
      - path: /console
        pathType: Prefix
        backend:
          service:
            name: console
            port: 
              name: console
      - path: /nscale_web
        pathType: Prefix
        backend:
          service:
            name: application-layer-web
            port: 
              name: web
      - path: /nscalemc
        pathType: Prefix
        backend:
          service:
            name: monitoring-console
            port: 
              name: monitoring
